# replace_pics

./: .gitignore  k.ipynb  pyproject.toml
replace_pics/: gui.py  utils.py
tests/: test_replace_pics.py
